finished BiggestInt.cpp file

--- a/Assignment 1/Assignment 1.vcxproj
+++ b/Assignment 1/Assignment 1.vcxproj
@@ -64,6 +64,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BiggestInt.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="grades.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
