--- a/Assignment 1/Assignment 1.vcxproj.filters
+++ b/Assignment 1/Assignment 1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Fraction Calc.cpp">
+    <ClCompile Include="GradeSchema.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
